# qctl

./: .goose_rules  AGENTS.md  Cargo.toml  README.md
.github/workflows/: release.yml  rust.yml
docs/: AUDIT.md
src/: main.rs
tests/: cli.rs
